# aingle-wasmer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  ci.yml  mobile.yml  prepare-release.yml  publish-release.yml  test.yml
crates/codec/: Cargo.toml
crates/codec/src/: checksum.rs  decode.rs  encode.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: envelope.rs  error.rs  lib.rs
crates/guest/: Cargo.toml
crates/guest/src/: arena.rs  compat.rs  host_call.rs  lib.rs  memory.rs  prelude.rs
crates/host/: Cargo.toml
crates/host/benches/: instance.rs
crates/host/src/: cache.rs  engine.rs  env.rs  error.rs  guest.rs  instance.rs  lib.rs  module.rs  prelude.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs  slice.rs  traits.rs
