[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle-wasmer"
license = "Apache-2.0"
authors = ["AIngle Core Dev Team <devcore@apilium.com>"]
edition = "2021"

[workspace.dependencies]
# Types crate (no external deps)
aingle_wasm_types = { version = "=0.1.0", path = "crates/types" }

# Codec crate
aingle_wasm_codec = { version = "=0.1.0", path = "crates/codec" }

# Guest crate
aingle_wasm_guest = { version = "=0.1.0", path = "crates/guest" }

# Host crate
aingle_wasm_host = { version = "=0.1.0", path = "crates/host", default-features = false }

# Serialization - Zero-copy
capnp = "0.20"
capnpc = "0.20"

# Memory management
bumpalo = { version = "3.16", features = ["collections"] }

# Proc macros
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
bytes = "1"

# Hashing/checksum
crc32fast = "1.4"

# WASM runtime
wasmer = { version = "6.0.0", default-features = false }
wasmer-middlewares = { version = "6.0.0" }

# Tracing
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

# Dev dependencies
criterion = "0.5"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1

[profile.release.package.tests]
debug = true
