[package]
name = "aingle_wasm_codec"
version.workspace = true
description = "Zero-copy serialization codec for AIngle WASM"
documentation = "https://docs.rs/aingle_wasm_codec"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aingle_wasm_types.workspace = true
crc32fast.workspace = true
bytes.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = ["std"]
std = []
