[package]
name = "aingle_wasmer_common"
version.workspace = true
description = "Core types for AIngle WASM runtime - zero dependencies"
documentation = "https://docs.rs/aingle_wasmer_common"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Optional: aingle middleware bytes integration for SerializedBytesError
aingle_middleware_bytes = { version = "0.0.3", optional = true }

# Serialization support (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = []
std = ["serde/std"]
middleware_bytes = ["aingle_middleware_bytes", "std"]
