[package]
name = "aingle_wasm_guest"
version.workspace = true
description = "Guest-side WASM utilities for AIngle with arena allocator"
documentation = "https://docs.rs/aingle_wasm_guest"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aingle_wasm_types.workspace = true
aingle_wasm_codec.workspace = true
bumpalo.workspace = true

[features]
default = []
