[package]
name = "aingle_wasmer_guest"
version.workspace = true
description = "Guest-side WASM utilities for AIngle with arena allocator"
documentation = "https://docs.rs/aingle_wasmer_guest"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aingle_wasmer_common = { workspace = true, features = ["middleware_bytes"] }
aingle_wasmer_codec.workspace = true
bumpalo.workspace = true

# Serialization for compatibility with aingle
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"

# aingle middleware bytes integration (re-exported from common)
aingle_middleware_bytes = "0.0.3"

[features]
default = []
