[package]
name = "aingle_wasm_host"
version.workspace = true
description = "Host-side WASM execution engine for AIngle"
documentation = "https://docs.rs/aingle_wasm_host"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aingle_wasm_types.workspace = true
aingle_wasm_codec.workspace = true
wasmer = { workspace = true, optional = true }
wasmer-middlewares = { workspace = true, optional = true }
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = ["wasmer_sys_dev"]
wasmer_sys_dev = ["wasmer/sys", "wasmer/cranelift", "wasmer-middlewares"]
wasmer_sys_prod = ["wasmer/sys", "wasmer/llvm", "wasmer-middlewares"]
error_as_host = ["aingle_wasm_types/std"]

[[bench]]
name = "instance"
harness = false
