[package]
name = "aingle_wasmer_host"
version.workspace = true
description = "Host-side WASM execution engine for AIngle"
documentation = "https://docs.rs/aingle_wasmer_host"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aingle_wasmer_common.workspace = true
aingle_wasmer_codec.workspace = true
wasmer = { workspace = true, optional = true }
wasmer-middlewares = { workspace = true, optional = true }
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true

# Serialization for aingle compatibility
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = ["wasmer_sys_dev", "std"]
wasmer_sys_dev = ["wasmer/sys", "wasmer/cranelift", "wasmer-middlewares"]
wasmer_sys_prod = ["wasmer/sys", "wasmer/llvm", "wasmer-middlewares"]
std = ["aingle_wasmer_common/std"]
error_as_host = ["std"]

[[bench]]
name = "instance"
harness = false
